--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ server:
   servlet:
     context-path: /tam
   port: 8088
+
 # DataSource Config
 spring:
   datasource:
@@ -9,3 +10,15 @@ spring:
     url: jdbc:mysql://localhost:3306/tam?serverTimezone=Asia/Shanghai
     username: root
     password: 20111124
+# Logger Config
+logging:
+  level:
+    com.rango.tam: debug
+
+mybatis-plus:
+  mapper-locations: classpath:/mapper/*Mapper.xml
+  global-config:
+    db-config:
+      logic-delete-field: flag  # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
+      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
