--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,7 @@ logging:
   level:
     com.rango.tam: debug
 
+# MybatisPlus Config
 mybatis-plus:
   mapper-locations: classpath:/mapper/*Mapper.xml
   global-config:
@@ -22,3 +23,9 @@ mybatis-plus:
       logic-delete-field: flag  # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+
+netty:
+  tcp:
+    server:
+      host: 127.0.0.1
+      port: 8024
