--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,13 @@ spring:
     url: jdbc:mysql://localhost:3306/tam?serverTimezone=Asia/Shanghai
     username: root
     password: 20111124
+
+# Activiti Config
+  activiti:
+    database-schema-update: true
+    db-history-used: true
+    history-level: audit
+
 # Logger Config
 logging:
   level:
@@ -24,6 +31,7 @@ mybatis-plus:
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
 
+# Netty Config
 netty:
   tcp:
     server:
