--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+# System Config
 server:
   servlet:
     context-path: /tam
@@ -5,9 +6,11 @@ server:
 
 # DataSource Config
 spring:
+  profiles:
+    active: dev
   datasource:
+    url: jdbc:mysql://localhost:3306/tam?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/tam?serverTimezone=Asia/Shanghai
     username: root
     password: 20111124
 
@@ -30,6 +33,8 @@ mybatis-plus:
       logic-delete-field: flag  # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 # Netty Config
 netty:
